--- a/docs/styles.css
+++ b/docs/styles.css
@@ -26,6 +26,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  color: var(--primary-color);
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
